Finished the product

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,85 +11,88 @@
     <div class="header">
         <div class="header-top-section">
             <div class="header-logo">
-                <p>Header Logo</p>
+                <p>Travel Today</p>
             </div>
+
             <div class="header-links">
-                <ul>
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
+                <ul class="header-links-ul">
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Help</li>
                 </ul>
             </div>
         </div>
+
         <div class="header-bottom-section">
             <div class="header-left-side">
                 <div class="hero-text">
-                    <p>This website is awesome</p>
+                    <p>Explore the World</p>
                 </div>
                 <div class="hero-subtext">
-                    <p>Subtext example</p>
+                    <p>Come and book vacations/flights with us to explore the world.</p>
                 </div>
                 <div class="header-button">
-                    <button>Sign Up</button>
+                    <button class="sign-up-button">Sign Up</button>
                 </div>
+            </div>
+            <div class="header-right-side">
+                <img src="./img/s-tsuchiya.jpg" alt="Photo by Tsuchiya" title="Photo by Tsuchiya" id="header-right-side-img">
             </div>
         </div>
     </div>
 
     <div class="img-info">
         <div class="img-info-title">
-            Some random information.
+            Beautiful Travel Pictures
         </div>
-        <div class="img-section">
-            <div class="img-showcase">
-                <img src="#" alt="#">
-                <p>Img subtext</p>
+        <div class="all-img">
+            <div class="img-section">
+                <div class="img-showcase">
+                    <img src="./img/pramod-tiwari.jpg" alt="#" class="eximg" title="Photo by Pramod Tiwari">
+                    <p>Credit: Pramod Tiwari</p>
+                </div>
             </div>
-        </div>
-        <div class="img-section">
-            <div class="img-showcase">
-                <img src="#" alt="#">
-                <p>Img subtext</p>
+            <div class="img-section">
+                <div class="img-showcase">
+                    <img src="./img/francesco-ungaro.jpg" alt="#" class="eximg" title="Photo by Francesco Ungaro">
+                    <p>Credit: Franceso Ungaro</p>
+                </div>
             </div>
-        </div>
-        <div class="img-section">
-            <div class="img-showcase">
-                <img src="#" alt="#">
-                <p>Img subtext</p>
+            <div class="img-section">
+                <div class="img-showcase">
+                    <img src="./img/hugo-agut-tugal.jpg" alt="#" class="eximg" title="Photo by Hugo Agut tugal">
+                    <p>Credit: Hugo Agut tugal</p>
+                </div>
             </div>
-        </div>
-        <div class="img-section">
-            <div class="img-showcase">
-                <img src="#" alt="#">
-                <p>Img subtext</p>
+            <div class="img-section">
+                <div class="img-showcase">
+                    <img src="./img/nguyen-tp-hai.jpg" alt="#" class="eximg" title="Photo by Nguyen TP Hai">
+                    <p>Credit: Nguyen TP Hai</p>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="quote-section">
-        <div class="quote">Quote</div>
-        <div class="quote-author">Author</div>
+            <div class="quote">"A journey of a thousand miles begins with a single step."</div>
+            <div class="quote-author">- Lao Tzu</div>
     </div>
 
     <div class="call-to-action">
         <div class="blue-space">
-            <div class="main-call">
-                Call to action!
+            <div class="blue-space-content">
+                <p id="call">Book a vacation with us today!</p>
+                <p>Sign up here!</p>
             </div>
-            <div class="sub-call">
-                <div class="sub-call-text">
-                    <p>Sign up for our product</p>
-                </div>
-                
-                <div class="call-button">
-                    <button id="call-button-id">Sign Up</button>
-                </div>
+
+            <div class="bottom-sign">
+                <button id="final-sign">Sign up</button>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <p>Copyright example</p>
+        <p>Copyright © Kyle Kim (https://github.com/kylekim)</p>
     </div>
 </body>
 </html>
